<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.testetecnospeed.adicionavaga.RegistraVaga">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textView_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorHint"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_titulo"
                android:inputType="text"
                android:textColor="@color/colorHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textView_setor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorHint"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_setor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_setor"
                android:inputType="text"
                android:shadowColor="@color/colorHint"
                android:textColor="@color/colorHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textView_cargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorHint"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_cargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cargo"
                android:inputType="text"
                android:shadowColor="@color/colorHint"
                android:textColor="@color/colorHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textView_atividade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorHint"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_atividade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_atividade"
                android:inputType="textMultiLine"
                android:lines="3"
                android:shadowColor="@color/colorHint"
                android:textColor="@color/colorHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textView_requisito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorHint"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_requisito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_requisito"
                android:inputType="textMultiLine"
                android:lines="2"
                android:shadowColor="@color/colorHint"
                android:textColor="@color/colorHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textView_escolaridade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorHint"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_escolaridade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_escolaridade"
                android:inputType="text"
                android:shadowColor="@color/colorHint"
                android:textColor="@color/colorHint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/cadastrar_salvar"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/salvar"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
